# cumulus-library-umls

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  CONTRIBUTING.md  README.MD  README.md  pyproject.toml
.github/workflows/: ci.yaml  pypi.yaml
cumulus_library_umls/: __init__.py  ancilary_tables.sql  ancillary_tables.sql  manifest.toml  static_builder.py  umls_builder.py
cumulus_library_umls/reference_sql/: static_builder.sql  umls_builder.sql
cumulus_library_umls/static_files/: umls_rel.tsv  umls_rela.tsv  umls_tui.tsv
cumulus_library_umls/umls/: manifest.toml  umls_builder.py
rxnorm/: manifest.toml  rxnorm_builder.py
tests/: test_ancilary_data.py  test_ancillary_data.py  test_rxnorm_builder.py  test_static_builder.py  test_umls_builder.py
tests/test_data/: README.MD
tests/test_data/2000AA/META/: MRCONSO.RRF  MRCONSO.ctl  MRREL.RRF  MRREL.ctl  TESTTABLE.RRF  TESTTABLE.ctl
